# loteria

./: Cargo.toml  README.md  index.html  styles.css
src/: card.rs  game.rs  main.rs
