[package]
name = "loteria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.3.0"
gloo-timers = "0.2"
web-sys = "0.3.70"

[[bin]]
name = "loteria"
path = "src/main.rs"
